--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#"><li>Home</li></a>
             <a href="#about"><li>About</li></a>
             <a href="#services"><li>Services</li></a>
-            <a href="/price.html"><li>Pricing</li></a>
+            <a href="/pgcleaning/price.html"><li>Pricing</li></a>
             <a href="#"><li>Careers</li></a>
             <a href="#contact"><li>Contact</li></a>
 
@@ -53,7 +53,7 @@
             <a href="#" class="hideOnmobile"><li>Home</li></a>
             <a href="#about" class="hideOnmobile"><li>About</li></a>
             <a href="#services" class="hideOnmobile"><li>Services</li></a>
-            <a href="/price.html" class="hideOnmobile"><li>Pricing</li></a>
+            <a href="/pgcleaning/price.html" class="hideOnmobile"><li>Pricing</li></a>
             <a href="#" class="hideOnmobile"><li>Careers</li></a>
             <a href="#contact" class="hideOnmobile"><li>Contact</li></a>
             <a href="#" class="show" onclick="showSidebar()"><li><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="white"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li></a>
