--- a/price.html
+++ b/price.html
@@ -33,12 +33,12 @@
 
             <ul>
                
-            <a href="/index.html"><li>Home</li></a>
-            <a href="/index.html"><li>About</li></a>
-            <a href="/index.html"><li>Services</li></a>
+            <a href="/pgcleaning/index.html"><li>Home</li></a>
+            <a href="/pgcleaning/index.html"><li>About</li></a>
+            <a href="/pgcleaning/index.html"><li>Services</li></a>
             <a href="#"><li>Pricing</li></a>
-            <a href="/index.html"><li>Careers</li></a>
-            <a href="/index.html"><li>Contact</li></a>
+            <a href="/pgcleaning/index.html"><li>Careers</li></a>
+            <a href="/pgcleaning/index.html"><li>Contact</li></a>
 
         </ul>
         </div>
@@ -56,13 +56,13 @@
           
 
             <ul>
-            <a href="/index.html" class="hideOnmobile"><li>Home</li></a>
-            <a href="/index.html" class="hideOnmobile"><li>About</li></a>
-            <a href="/index.html" class="hideOnmobile"><li>Services</li></a>
+            <a href="/pgcleaning/index.html" class="hideOnmobile"><li>Home</li></a>
+            <a href="/pgcleaning/index.html" class="hideOnmobile"><li>About</li></a>
+            <a href="/pgcleaning/index.html" class="hideOnmobile"><li>Services</li></a>
             <a href="#" class="hideOnmobile"><li>Pricing</li></a>
-            <a href="/index.html" class="hideOnmobile"><li>Careers</li></a>
-            <a href="/index.html" class="hideOnmobile"><li>Contact</li></a>
-            <a href="/index.html" class="show" onclick="showSidebar()"><li><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="white"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li></a>
+            <a href="/pgcleaning/index.html" class="hideOnmobile"><li>Careers</li></a>
+            <a href="/pgcleaning/index.html" class="hideOnmobile"><li>Contact</li></a>
+            <a href="/pgcleaning/index.html" class="show" onclick="showSidebar()"><li><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="white"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li></a>
         </ul>
         </div>
     </div>
