--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="check">
                 <p>Check Our Pricing by Clicking the below button</p>
-                <a href="/price.html"><button>
+                <a href="/pgcleaning/price.html"><button>
                     Check Now
                 </button> </a>
             </div>
